--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -6,27 +6,30 @@ dataSources:
     name: Token
     network: mainnet
     source:
-      address: "0xc9fe4ffc4be41d93a1a7189975cd360504ee361a"
+      address: "0x3B3ee1931Dc30C1957379FAc9aba94D1C48a5405"
       abi: Token
+      startBlock: 11565020
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - ApprovalForAll
-        - BaseURIUpdated
-        - Minted
-        - NFTCreatorMigrated
-        - NFTMarketUpdated
-        - NFTMetadataUpdated
-        - NFTOwnerMigrated
-        - PaymentAddressMigrated
-        - ProxyCallContractUpdated
-        - TokenCreatorPaymentAddressSet
-        - TokenCreatorUpdated
-        - TokenIPFSPathUpdated
-        - Transfer
+        # - Approval
+        # - ApprovalForAll
+        # - BaseURIUpdated
+        # - Minted
+        # - NFTCreatorMigrated
+        # - NFTMarketUpdated
+        # - NFTMetadataUpdated
+        # - NFTOwnerMigrated
+        # - PaymentAddressMigrated
+        # - ProxyCallContractUpdated
+        # - TokenCreatorPaymentAddressSet
+        # - TokenCreatorUpdated
+        # - TokenIPFSPathUpdated
+        # - Transfer
+        - Token
+        - User
       abis:
         - name: Token
           file: ./abis/Token.json
@@ -55,6 +58,10 @@ dataSources:
           handler: handleTokenCreatorPaymentAddressSet
         - event: TokenCreatorUpdated(indexed address,indexed address,indexed uint256)
           handler: handleTokenCreatorUpdated
+        - event: TokenIPFSPathUpdated(indexed uint256,indexed string,string)
+          handler: handleTokenIPFSPathUpdated
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
         - event: TokenIPFSPathUpdated(indexed uint256,indexed string,string)
           handler: handleTokenIPFSPathUpdated
         - event: Transfer(indexed address,indexed address,indexed uint256)
