--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -14,20 +14,20 @@ dataSources:
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        # - Approval
-        # - ApprovalForAll
-        # - BaseURIUpdated
-        # - Minted
-        # - NFTCreatorMigrated
-        # - NFTMarketUpdated
-        # - NFTMetadataUpdated
-        # - NFTOwnerMigrated
-        # - PaymentAddressMigrated
-        # - ProxyCallContractUpdated
-        # - TokenCreatorPaymentAddressSet
-        # - TokenCreatorUpdated
-        # - TokenIPFSPathUpdated
-        # - Transfer
+        - Approval
+        - ApprovalForAll
+        - BaseURIUpdated
+        - Minted
+        - NFTCreatorMigrated
+        - NFTMarketUpdated
+        - NFTMetadataUpdated
+        - NFTOwnerMigrated
+        - PaymentAddressMigrated
+        - ProxyCallContractUpdated
+        - TokenCreatorPaymentAddressSet
+        - TokenCreatorUpdated
+        - TokenIPFSPathUpdated
+        - Transfer
         - Token
         - User
       abis:
