--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "foundationnft",
+  "name": "subgraph-foundation",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ fedegomezdev/foundationnft",
-    "create-local": "graph create --node http://localhost:8020/ fedegomezdev/foundationnft",
-    "remove-local": "graph remove --node http://localhost:8020/ fedegomezdev/foundationnft",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fedegomezdev/foundationnft"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ fedegomezdev/subgraph-foundation",
+    "create-local": "graph create --node http://localhost:8020/ fedegomezdev/subgraph-foundation",
+    "remove-local": "graph remove --node http://localhost:8020/ fedegomezdev/subgraph-foundation",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 fedegomezdev/subgraph-foundation"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.25.1",
